✨ Amélioration du slogan avec un style plus lisible

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <div class="spinner"></div>
     </div>
     <header>
-      <p class="header-banner-text">Le futur de ton site commence ici.</p>
+      <p class="header-banner-text full-gradient-text">🚀 Le futur de ton site commence ici.</p>
       <button id="darkModeToggle" style="margin-left: 1rem;">🌓</button>
     </header>
 
@@ -202,14 +202,8 @@
       </div>
     </section>
 
-    <div class="slogan-banner">
-      <h1>Le futur de ton site commence ici.</h1>
-    </div>
-
+    
     <section id="welcome" class="scroll-right">
-      <div class="accroche-futur">
-        <h2>🚀 Le futur de ton site commence ici.</h2>
-      </div>
       <div class="welcome-overlay">
         <div class="welcome-content">
           <h1 style="font-size: 2.8rem; font-weight: 700; font-family: 'Outfit', sans-serif; text-shadow: 1px 1px 4px rgba(0,0,0,0.3); color: var(--text-color);">
@@ -1118,21 +1112,21 @@ body.dark-mode .welcome-overlay {
     }
 </style>
 <style>
-.accroche-futur {
-  text-align: center;
-  font-size: 1.8rem;
-  font-weight: bold;
-  padding: 2rem 1rem;
-  color: #b5b9ff;
-  text-shadow: 0 0 15px #7f88ff;
-  background: transparent;
-}
-
-@media (min-width: 768px) {
   .accroche-futur {
-    font-size: 2.2rem;
+    text-align: center;
+    font-size: 1.8rem;
+    font-weight: bold;
+    padding: 2rem 1rem;
+    color: #b5b9ff;
+    text-shadow: 0 0 15px #7f88ff;
+    background: transparent;
   }
-}
+
+  @media (min-width: 768px) {
+    .accroche-futur {
+      font-size: 2.2rem;
+    }
+  }
 /* Ajout du style pour .intro-message */
 .intro-message {
   font-size: 2.2rem;
