--- a/services.html
+++ b/services.html
@@ -13,10 +13,9 @@
     <div class="spinner"></div>
   </div>
   <header>
-    <button class="menu-toggle" id="menu-toggle" aria-label="Ouvrir le menu" aria-expanded="false">☰</button>
     <button id="darkModeToggle" style="margin-left: 1rem;">🌓</button>
     <nav>
-      <ul id="main-menu">
+      <ul class="desktop-menu">
         <li><a href="index.html">🏠 Accueil</a></li>
         <li><a href="a-propos.html">ℹ️ À propos</a></li>
         <li><a href="services.html" class="active">🧰 Services</a></li>
