💡 Effet néon sur le header-banner-text + clean class redondante

--- a/services.html
+++ b/services.html
@@ -13,8 +13,10 @@
     <div class="spinner"></div>
   </div>
   <header>
+    <div id="menu-toggle" class="menu-toggle">☰</div>
+    <!-- <button class="menu-toggle" id="menu-toggle" aria-label="Ouvrir le menu" aria-expanded="false">☰</button> -->
     <button id="darkModeToggle" style="margin-left: 1rem;">🌓</button>
-    <nav>
+    <nav> 
       <ul class="desktop-menu">
         <li><a href="index.html">🏠 Accueil</a></li>
         <li><a href="a-propos.html">ℹ️ À propos</a></li>
