💎 Menu burger unifié sur toutes les pages

--- a/index.html
+++ b/index.html
@@ -168,10 +168,9 @@
 </head>
 <body>
   
-  <nav class="main-nav">
-    <div id="menu-toggle" class="menu-toggle">☰</div>
-
-    <ul id="main-menu">
+  <div id="menu-toggle" class="menu-toggle" aria-label="Ouvrir le menu">☰</div>
+  <nav>
+    <ul id="main-menu" class="menu-list">
       <li><a href="index.html">🏠 Accueil</a></li>
       <li><a href="a-propos.html">ℹ️ À propos</a></li>
       <li><a href="services.html">🧰 Services</a></li>
