--- a/tarifs.html
+++ b/tarifs.html
@@ -174,10 +174,10 @@
   <div id="particles-js"></div>
   <div id="loader"><div class="spinner"></div></div>
   <header>
-    <button class="menu-toggle" id="menu-toggle" aria-label="Ouvrir le menu" aria-expanded="false">☰</button>
+    <div id="menu-toggle" class="menu-toggle" aria-label="Ouvrir le menu">☰</div>
     <button id="darkModeToggle" style="margin-left: 1rem;">🌓</button>
     <nav>
-      <ul id="main-menu">
+      <ul id="main-menu" class="menu-list">
         <li><a href="index.html">🏠 Accueil</a></li>
         <li><a href="a-propos.html" class="active">ℹ️ À propos</a></li>
         <li><a href="services.html">🧰 Services</a></li>
