🔧 Accessibilité améliorée : ARIA sur bouton burger + menu unifié

--- a/a-propos.html
+++ b/a-propos.html
@@ -11,10 +11,10 @@
   <div id="particles-js"></div>
   <div id="loader"><div class="spinner"></div></div>
   <header>
-    <button class="menu-toggle" id="menu-toggle" aria-label="Ouvrir le menu" aria-expanded="false">☰</button>
+    <div id="menu-toggle" class="menu-toggle" aria-label="Ouvrir le menu" aria-controls="main-menu" aria-expanded="false">☰</div>
     <button id="darkModeToggle" style="margin-left: 1rem;">🌓</button>
     <nav>
-      <ul id="main-menu">
+      <ul id="main-menu" class="menu-list">
         <li><a href="index.html">🏠 Accueil</a></li>
         <li><a href="a-propos.html" class="active">ℹ️ À propos</a></li>
         <li><a href="services.html">🧰 Services</a></li>
@@ -62,32 +62,6 @@
       interval: 200
     });
     document.querySelectorAll('section').forEach(section => section.classList.add('visible'));
-    const toggle = document.getElementById('menu-toggle');
-    const nav = document.getElementById('main-menu');
-
-    toggle.addEventListener('click', () => {
-      nav.classList.toggle('show');
-      toggle.textContent = nav.classList.contains('show') ? '✖' : '☰';
-      toggle.setAttribute('aria-expanded', nav.classList.contains('show'));
-    });
-
-    document.querySelectorAll('nav ul li a').forEach(link => {
-      link.addEventListener('click', () => {
-        if (nav.classList.contains('show')) {
-          nav.classList.remove('show');
-          toggle.textContent = '☰';
-          toggle.setAttribute('aria-expanded', false);
-        }
-      });
-    });
-    const darkToggle = document.getElementById('darkModeToggle');
-    if (localStorage.getItem('theme') === 'dark') {
-      document.body.classList.add('dark-mode');
-    }
-    darkToggle.addEventListener('click', () => {
-      document.body.classList.toggle('dark-mode');
-      localStorage.setItem('theme', document.body.classList.contains('dark-mode') ? 'dark' : 'light');
-    });
   </script>
   <script>
     window.addEventListener('load', () => {
