--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     <div class="spinner"></div>
   </div>
   <!-- Menu hamburger pour mobile -->
-  <div id="menu-toggle" class="menu-toggle" aria-label="Ouvrir le menu">☰</div>
+  <div id="menu-toggle" class="menu-toggle" aria-label="Ouvrir le menu" aria-controls="main-menu" aria-expanded="false">☰</div>
   <header>
     <button id="darkModeToggle" style="margin-left: 1rem;">🌓</button>
     <nav>
@@ -51,6 +51,16 @@
   <script src="https://unpkg.com/scrollreveal"></script>
 <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 <script src="script.js" defer></script>
+<script>
+  window.addEventListener('load', () => {
+    const loader = document.getElementById('loader');
+    if (loader) {
+      loader.style.opacity = '0';
+      loader.style.transition = 'opacity 0.5s ease';
+      setTimeout(() => loader.style.display = 'none', 500);
+    }
+  });
+</script>
 <script>
   particlesJS("particles-js", {
     "particles": {
