✨ Refactor CSS & JS : menu burger, overlay, modularisation, variables

--- a/services.html
+++ b/services.html
@@ -48,7 +48,7 @@
     <div class="spinner"></div>
   </div>
   <header>
-    <div id="menu-toggle" class="menu-toggle">☰</div>
+    <div id="menu-toggle" class="menu-toggle" aria-label="Ouvrir le menu" aria-controls="main-menu" aria-expanded="false">☰</div>
     <!-- <button class="menu-toggle" id="menu-toggle" aria-label="Ouvrir le menu" aria-expanded="false">☰</button> -->
     <button id="darkModeToggle" style="margin-left: 1rem;">🌓</button>
     <nav> 
