--- a/tarifs.html
+++ b/tarifs.html
@@ -174,7 +174,7 @@
   <div id="particles-js"></div>
   <div id="loader"><div class="spinner"></div></div>
   <header>
-    <div id="menu-toggle" class="menu-toggle" aria-label="Ouvrir le menu">☰</div>
+    <div id="menu-toggle" class="menu-toggle" aria-label="Ouvrir le menu" aria-controls="main-menu" aria-expanded="false">☰</div>
     <button id="darkModeToggle" style="margin-left: 1rem;">🌓</button>
     <nav>
       <ul id="main-menu" class="menu-list">
