--- a/a-propos.html
+++ b/a-propos.html
@@ -8,9 +8,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body>
+  <div id="menu-overlay" class="menu-overlay"></div>
   <div id="particles-js"></div>
   <div id="loader"><div class="spinner"></div></div>
   <header>
+    <div id="menu-overlay" class="menu-overlay"></div>
     <div id="menu-toggle" class="menu-toggle" aria-label="Ouvrir le menu" aria-controls="main-menu" aria-expanded="false">☰</div>
     <button id="darkModeToggle" style="margin-left: 1rem;">🌓</button>
     <nav>
