--- a/contact.html
+++ b/contact.html
@@ -89,6 +89,7 @@
   </style>
 </head>
 <body>
+  <div id="menu-overlay" class="menu-overlay"></div>
   <div id="particles-js"></div>
   <div id="loader">
     <div class="spinner"></div>
@@ -166,6 +167,7 @@
     <p style="margin-top: 1rem;">© 2025 Studio Rapido — Tous droits réservés.</p>
   </footer>
 
+  <script src="script.js" defer></script>
   <script src="https://unpkg.com/scrollreveal"></script>
   <script>
     ScrollReveal().reveal('section', {
@@ -308,6 +310,32 @@
         "onhover": { "enable": true, "mode": "repulse" }
       }
     }
+  });
+</script>
+</script>
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const toggle = document.getElementById('menu-toggle');
+    const nav = document.getElementById('main-menu');
+    const overlay = document.getElementById('menu-overlay');
+
+    function toggleMenu() {
+      const isOpen = nav.classList.toggle('show');
+      toggle.classList.toggle('open', isOpen);
+      overlay.classList.toggle('show', isOpen);
+      toggle.setAttribute('aria-expanded', isOpen);
+    }
+
+    toggle.addEventListener('click', toggleMenu);
+    overlay.addEventListener('click', toggleMenu);
+
+    document.querySelectorAll('nav ul li a').forEach(link => {
+      link.addEventListener('click', () => {
+        if (nav.classList.contains('show')) {
+          toggleMenu();
+        }
+      });
+    });
   });
 </script>
 </body>
