--- a/services.html
+++ b/services.html
@@ -43,15 +43,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body>
+  <div id="menu-overlay" class="menu-overlay"></div>
   <div id="particles-js"></div>
   <div id="loader">
     <div class="spinner"></div>
   </div>
   <header>
+    <div id="menu-overlay" class="menu-overlay"></div>
     <div id="menu-toggle" class="menu-toggle" aria-label="Ouvrir le menu" aria-controls="main-menu" aria-expanded="false">☰</div>
-    <!-- <button class="menu-toggle" id="menu-toggle" aria-label="Ouvrir le menu" aria-expanded="false">☰</button> -->
     <button id="darkModeToggle" style="margin-left: 1rem;">🌓</button>
-    <nav> 
+    <nav>
       <ul id="main-menu" class="menu-list">
         <li><a href="index.html">🏠 Accueil</a></li>
         <li><a href="a-propos.html">ℹ️ À propos</a></li>
