--- a/tarifs.html
+++ b/tarifs.html
@@ -171,6 +171,7 @@
   </style>
 </head>
 <body>
+  <div id="menu-overlay" class="menu-overlay"></div>
   <div id="particles-js"></div>
   <div id="loader"><div class="spinner"></div></div>
   <header>
@@ -179,7 +180,7 @@
     <nav>
       <ul id="main-menu" class="menu-list">
         <li><a href="index.html">🏠 Accueil</a></li>
-        <li><a href="a-propos.html" class="active">ℹ️ À propos</a></li>
+        <li><a href="a-propos.html">ℹ️ À propos</a></li>
         <li><a href="services.html">🧰 Services</a></li>
         <li><a href="portfolio.html">🖼️ Portfolio</a></li>
         <li><a href="tarifs.html">💰 Tarifs</a></li>
