♻️ Ajout des fichiers restants modifiés : a-propos, contact, index, tarifs, CSS

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <div class="spinner"></div>
   </div>
   <div id="aurion-overlay" class="aurion-overlay"></div>
+  <div class="aurion-popup">
+    <span class="close-btn">✕</span>
+    <p>Salut, je suis Aurion. Que puis-je faire pour toi ?</p>
+  </div>
   <div id="aurion-toggle" class="aurion-toggle" aria-label="Ouvrir le chat">🤖<span id="aurion-notif" class="notif-bubble hidden"></span></div>
   <div id="aurion-panel" class="aurion-panel hidden">
     <div class="aurion-header">
