--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>À propos - Studio Rapido</title>
+  <title>Portfolio - Studio Rapido</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
@@ -14,25 +14,30 @@
     <div class="spinner"></div>
   </div>
   <header>
-    <div id="menu-overlay" class="menu-overlay"></div>
     <div id="menu-toggle" class="menu-toggle" aria-label="Ouvrir le menu" aria-controls="main-menu" aria-expanded="false">☰</div>
     <button id="darkModeToggle" style="margin-left: 1rem;">🌓</button>
     <nav>
       <ul id="main-menu" class="menu-list">
         <li><a href="index.html">🏠 Accueil</a></li>
-        <li><a href="a-propos.html" class="active">ℹ️ À propos</a></li>
+        <li><a href="a-propos.html">ℹ️ À propos</a></li>
         <li><a href="services.html">🧰 Services</a></li>
-        <li><a href="portfolio.html">🖼️ Portfolio</a></li>
+        <li><a href="portfolio.html" class="active">🖼️ Portfolio</a></li>
         <li><a href="tarifs.html">💰 Tarifs</a></li>
         <li><a href="contact.html">📞 Contact & Devis</a></li>
       </ul>
     </nav>
   </header>
 
-  <section id="about">
-    <h2>ℹ️ À propos de Studio Rapido</h2>
-    <p>Bienvenue chez Studio Rapido, où la créativité rencontre la technologie pour donner vie à vos idées numériques. Je suis passionné par le design, le développement web et l'innovation, et je m'engage à offrir des solutions sur mesure qui répondent aux besoins uniques de chaque client.</p>
-    <p>Mon parcours est marqué par une quête constante d'excellence et une volonté d'explorer de nouvelles frontières dans le digital. Découvrez mon univers et comment je peux vous accompagner dans vos projets.</p>
+  <section id="portfolio">
+    <h2>🖼️ Mon Portfolio</h2>
+    <p>Plonge dans l’univers visuel de Studio Rapido. Chaque projet que je réalise est le fruit d’une réflexion poussée, d’un design sur-mesure et d’une exécution technique rigoureuse. Mon portfolio illustre mes compétences en développement web, design interactif, animations dynamiques et intégration d’intelligences artificielles adaptées aux besoins spécifiques de chaque client.</p>
+    <p>Découvre comment j’ai transformé des idées en expériences digitales uniques, en alliant esthétisme, performance et innovation.</p>
+    <div class="project">
+      <h3>🌐 Univers Rapido</h3>
+      <p>Premier site web que j’ai conçu, mêlant passion, apprentissage et univers personnel. Il marque le début de mon aventure dans la création digitale.</p>
+      <a href="https://rapidooff.github.io/universrapido/" target="_blank" class="project-link">🚀 Voir le site</a>
+    </div>
+    <p>(Galerie à venir)</p>
   </section>
 
   <footer class="site-footer">
