--- a/tarifs.html
+++ b/tarifs.html
@@ -183,7 +183,7 @@
         <li><a href="a-propos.html">ℹ️ À propos</a></li>
         <li><a href="services.html">🧰 Services</a></li>
         <li><a href="portfolio.html">🖼️ Portfolio</a></li>
-        <li><a href="tarifs.html">💰 Tarifs</a></li>
+        <li><a href="tarifs.html" class="active">💰 Tarifs</a></li>
         <li><a href="contact.html">📞 Contact & Devis</a></li>
       </ul>
     </nav>
@@ -313,6 +313,7 @@
           <a href="#" class="cta cta-choisir">Choisir cette formule</a>
           <a href="#" class="cta send-devis">📩 Obtenir un devis avec cette sélection</a>
         </div>
+</div> <!-- fermeture de .tarif-content ULTRA -->
   <script>
     document.querySelectorAll('.cta-choisir').forEach(button => {
       button.addEventListener('click', function (e) {
