✅ Fix sauvegarde forcée fichiers conflictuels

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>À propos - Studio Rapido</title>
+  <title>Contact - Studio Rapido</title>
+  <meta name="description" content="Contacte Studio Rapido pour lancer ton projet web ou demander un devis rapide. Réponse garantie sous 24h, sur-mesure et sans engagement.">
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet" />
   <style>
@@ -97,7 +98,7 @@
   <header>
     <div id="menu-toggle" class="menu-toggle" aria-label="Ouvrir le menu" aria-controls="main-menu" aria-expanded="false">☰</div>
     <button id="darkModeToggle" style="margin-left: 1rem;">🌓</button>
-    <nav>
+    <nav role="navigation">
       <ul id="main-menu" class="menu-list">
         <li><a href="index.html">🏠 Accueil</a></li>
         <li><a href="a-propos.html">ℹ️ À propos</a></li>
