✅ Sauvegarde finale : mise à jour responsive, menu, Aurion & optim HTML

--- a/a-propos.html
+++ b/a-propos.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>À propos - Studio Rapido</title>
+  <meta name="description" content="Studio Rapido – Création de sites animés et IA sur-mesure, en Île-de-France. Design moderne, responsive et rapide.">
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
@@ -14,7 +15,7 @@
   <header>
     <div id="menu-toggle" class="menu-toggle" aria-label="Ouvrir le menu" aria-controls="main-menu" aria-expanded="false">☰</div>
     <button id="darkModeToggle" style="margin-left: 1rem;">🌓</button>
-    <nav>
+    <nav role="navigation">
       <ul id="main-menu" class="menu-list">
         <li><a href="index.html">🏠 Accueil</a></li>
         <li><a href="a-propos.html" class="active">ℹ️ À propos</a></li>
@@ -34,15 +35,15 @@
       <p>💡 Avec une approche centrée utilisateur, je mixe design animé, interactivité poussée et technologies modernes pour booster ton image.</p>
       <p>👨‍💻 Du front-end stylé au back-end solide, en passant par des assistants IA ou du contenu interactif, Rapido a toujours une solution.</p>
     </div>
-    <section class="seo-boost">
-      <h2>Studio Rapido - Création de sites web & univers digitaux</h2>
-      <p>
-        Studio Rapido est un studio digital basé en Île-de-France, spécialisé dans la création de sites web modernes, 
-        responsives et animés pour les indépendants, artistes, créateurs de contenu et entreprises. 
-        Nous développons des expériences interactives sur-mesure, intégrons des IA vocales (type assistant JARVIS), 
-        et proposons des solutions rapides et stylées. Besoin d’un site vitrine ? Parlons-en.
-      </p>
-    </section>
+  </section>
+  <section class="seo-boost">
+    <h2>Studio Rapido - Création de sites web & univers digitaux</h2>
+    <p>
+      Studio Rapido est un studio digital basé en Île-de-France, spécialisé dans la création de sites web modernes, 
+      responsives et animés pour les indépendants, artistes, créateurs de contenu et entreprises. 
+      Nous développons des expériences interactives sur-mesure, intégrons des IA vocales (type assistant JARVIS), 
+      et proposons des solutions rapides et stylées. Besoin d’un site vitrine ? Parlons-en.
+    </p>
   </section>
 
   <footer class="site-footer">
