--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:url" content="https://studio-rapido.com/" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="description" content="Studio Rapido crée des sites web modernes, animés et responsives pour indépendants, artistes et entreprises. Basé en Île-de-France. Création rapide, style garanti." />
-  <title>À propos - Studio Rapido</title>
+  <title>Accueil - Studio Rapido</title>
   <link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml" />
   <link rel="robots" href="robots.txt" />
   <link rel="icon" type="image/png" href="assets/favicon.png" />
@@ -59,7 +59,7 @@
   </div>
   <div id="menu-overlay" class="menu-overlay"></div>
   <div id="menu-toggle" class="menu-toggle" aria-label="Ouvrir le menu">☰</div>
-  <nav>
+  <nav role="navigation">
     <ul id="main-menu" class="menu-list">
       <li><a href="index.html">🏠 Accueil</a></li>
       <li><a href="a-propos.html">ℹ️ À propos</a></li>
