--- a/tarifs.html
+++ b/tarifs.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>À propos - Studio Rapido</title>
+  <title>Tarifs - Studio Rapido</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet" />
   <style>
@@ -190,7 +190,7 @@
   </header>
 
   <section id="tarifs">
-    <div class="hero-content">
+    <!-- <div class="hero-content"> -->
       <h1>💰 Nos Formules</h1>
       <p>Chez Studio Rapido, on t'offre trois formules adaptées à tous les projets, du plus simple au plus ambitieux.</p>
 
@@ -313,7 +313,9 @@
           <a href="#" class="cta cta-choisir">Choisir cette formule</a>
           <a href="#" class="cta send-devis">📩 Obtenir un devis avec cette sélection</a>
         </div>
-</div> <!-- fermeture de .tarif-content ULTRA -->
+    </div> <!-- fermeture de .tarif-content ULTRA -->
+</div> <!-- fermeture de .hero-content -->
+</section>
   <script>
     document.querySelectorAll('.cta-choisir').forEach(button => {
       button.addEventListener('click', function (e) {
