✨ Intégration complète : menu burger, overlay, Aurion et styles mis à jour

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <!-- Only one <head> at the top, body follows -->
 </head>
 <body>
+  <div id="menu-overlay" class="menu-overlay hidden"></div>
   <div id="loader">
     <div class="spinner"></div>
   </div>
