--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body>
-  <div id="menu-overlay" class="menu-overlay"></div>
+  <div id="menu-overlay" class="menu-overlay hidden"></div>
   <div id="particles-js"></div>
   <div id="loader">
     <div class="spinner"></div>
