--- a/services.html
+++ b/services.html
@@ -48,7 +48,7 @@
     <div class="spinner"></div>
   </div>
   <header>
-    <div id="menu-overlay" class="menu-overlay"></div>
+    <div id="menu-overlay" class="menu-overlay hidden"></div>
     <div id="menu-toggle" class="menu-toggle" aria-label="Ouvrir le menu" aria-controls="main-menu" aria-expanded="false">☰</div>
     <button id="darkModeToggle" style="margin-left: 1rem;">🌓</button>
     <nav>
