--- a/tarifs.html
+++ b/tarifs.html
@@ -171,7 +171,7 @@
   </style>
 </head>
 <body>
-  <div id="menu-overlay" class="menu-overlay"></div>
+  <div id="menu-overlay" class="menu-overlay hidden"></div>
   <div id="particles-js"></div>
   <div id="loader"><div class="spinner"></div></div>
   <header>
